<resources>
    <string name="app_name">NuttySnap</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="set_up">Set Up</string>
    <string name="next">Next</string>
    <string name="please_enter_and_email_setup_screen">Please enter an email address to allow NuttySnap to send you a copy of each of the videos you record via an email link.\n\nA secondary email may be used for an additional benefit of securing your videos.</string>
    <string name="primary_email">Primary Email</string>
    <string name="secondary_email">Secondary Email</string>
    <string name="please_enter_primary_email">Please enter primary email</string>
    <string name="please_enter_secondary_email">Please enter secondary email</string>
    <string name="OK">Ok</string>
    <string name="invalid_email">Invalid email</string>
    <string name="videos">VIDEOS</string>
    <string name="video">VIDEO</string>

    <!-- Text for lock pattern -->
    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="wrong_pattern">Wrong pattern. Please try again!</string>
    <string name="cancel">Cancel</string>
    <string name="text_loading">loading...</string>
    <string name="error">error</string>
    <string name="load_more">Load more...</string>
    <string name="back_up">Back Up</string>
    <string name="back_up_completed">Backup completed.</string>
    <string name="notifications">Notifications</string>
    <string name="security">Security</string>
    <string name="contact_us">Contact Us</string>
    <string name="primacy_policy">Privacy Policy and Terms</string>
    <string name="term_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="settings">Settings</string>
    <string name="screen_unlock">Screen Unlock</string>
    <string name="choose_a_pattern">Choose a pattern</string>
    <string name="deleteSpecificVideoSuccessful">Successful</string>
    <string name="confirm_pattern">Re-enter pattern</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="set_duration">Set duration</string>
    <string name="auto_upload">Auto Upload</string>
    <string name="auto_upload_description">Videos are automatically uploaded in the background once the set duration has been reached.</string>
    <string name="tap_to_end_current_recording">Tap to end current recording</string>
    <string name="notify_me_after_each_back_up">Notify me after each back up</string>
    <string name="back">Back</string>
    <string name="delete_video_confirmation">Are you sure you want to delete this video?</string>
    <string name="could_not_delete_this_video">Could not delete. Please try again!</string>
    <!-- END -->

    <string name="facbeook_app_id">1619021364980291</string>
    <!--<string name="facbeook_app_id">360387744155569</string> --><!-- UW -->
    <string name="edit">Edit</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="successful">Successful</string>
    <string name="contact_us_subject">[Nuttysnap Team]</string>
    <string name="privacy_link">http://nuttysnap.com/html/privacy.htm</string>
    <string name="storage_full">There is insufficient space on this device. Please delete some old videos on SafeApp.</string>
    <string name="enable_lock_screen">Enable Lock Screen</string>
    <string name="start_recording_now">Start recording now!</string>
    <string name="capture_and_automatically_store">Capture and automatically store\nyour important moments.</string>
    <string name="unlock_to_change_lock_pattern">Unlock to change lock pattern</string>
    <string name="unlock_to_enable_lock_screen">Unlock to enable/disable lock screen</string>
    <string name="enable_pattern">Enable Pattern</string>

    <string name="youtube_upload">YouTube upload</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="google_play_not_available">Google Play Services not available</string>
    <string name="youtube_upload_started">Uploading to Youtube...</string>
    <string name="connection_to_google_play_failed">Connection to Play Services failed.</string>
    <string name="initiation_started">Initiation Started</string>
    <string name="initiation_completed">Initiation Completed</string>
    <string name="upload_in_progress">Direct Lite upload in progress</string>
    <string name="yt_upload_completed">YouTube Upload Completed</string>
    <string name="upload_completed">Upload completed</string>
    <string name="upload_not_started">Upload Not Started!</string>
    <string name="yt_upload_failed">YouTube Upload Failed</string>
    <string name="cant_access_play">Can\'t access to Google Play services</string>
    <string name="title_activity_play">Click below to submit</string>
    <string name="please_try_again">Please try again</string>
    <string name="watch_your_video">Watch your video</string>
    <string name="video_submitted_to_ytdl">Video submitted to YTDL</string>
    <string name="see_the_newly_uploaded_video">See the newly uploaded video</string>
    <string name="error_format">[Error] %s</string>
    <string name="share_facebook">Facebook</string>
    <string name="share_youtube">YouTube</string>
    <string name="share_option">Share option</string>
    <string name="condition_to_upload_video_to_youtube">In order to upload videos to YouTube, please make sure you\'ve already created a channel on your account.</string>
    <string name="howto_1">NuttySnap lets you record videos\ndiscretely from your lock screen.</string>
    <string name="howto_2"><![CDATA[<b>Swipe left</b> on the lock screen to record videos with the back\ncamera and <b>swipe up</b> to use the front.]]></string>
    <string name="howto_4"><![CDATA[Use NuttySnap from the lock screen\nor as a standalone camera.\nTake control with your options under\nthe <b>Settings</b>.]]></string>
    <string name="howto_3">Videos record in the background.\nUse the notification drawer to stop\nthem at anytime.</string>
    <string name="now_you_are_all_set">Now you\'re all set!</string>
    <string name="nuttysnap_is_ready_when_your_are">NuttySnap is ready when you are.\nUse it for all of the crazy times or important\nand crucial moments. Every second\ncounts, so use them wisely.</string>
    <string name="ok_i_got_it">Ok, I got it.</string>
</resources>
