<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"


    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:background="@color/color_set_duration" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/textview_title"
            android:gravity="center"
            android:background="@color/White"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="@dimen/safeapp_text_size"
            android:text="@string/delete_confirmation"/>

        <VideoView
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/Gray"/>


        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/button_ok"
            android:gravity="center"
            android:background="@color/White"


            android:textColor="@color/Black"
            android:textSize="@dimen/safeapp_text_size"
            android:textStyle="bold"
            android:text="@string/OK"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/button_cancel"
            android:gravity="center"
            android:background="@color/White"


            android:textColor="@color/Black"
            android:textSize="@dimen/safeapp_text_size"
            android:textStyle="bold"
            android:text="@string/cancel"/>

    </LinearLayout>


</RelativeLayout>