<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/popup"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:layout_centerInParent="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/bg_white_corner"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:id="@+id/textview_title"
            android:gravity="center"

            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="@dimen/safeapp_text_size"
            android:text="@string/share_option"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_gray" />

        <Button
            android:id="@+id/button_share_facebook"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/hight_size_setting_item"
            android:layout_marginTop="5dp"
            android:background="@color/transparent"

            android:gravity="center"

            android:text="@string/share_facebook"

            android:textColor="@color/Black"
            android:textSize="@dimen/safeapp_text_size" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/light_gray" />

        <Button
            android:id="@+id/button_share_youtube"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/hight_size_setting_item"
            android:background="@color/transparent"
            android:gravity="center"


            android:text="@string/share_youtube"

            android:textColor="@color/Black"
            android:textSize="@dimen/safeapp_text_size" />


    </LinearLayout>

</RelativeLayout>
